# snbt-dumper

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  pyvenv.cfg  requirements.txt  snbt.py
snbt_dumper/: __init__.py  cli.py  config.py  discovery.py  fetcher.py  models.py  storage.py  user_agents.py  worker.py
